# can_ada

./: .gitignore  CMakeLists.txt  LICENSE  README.md  can_ada.pyi  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
can_ada-stubs/: __init__.pyi
src/: ada.cpp  ada.h  binding.cpp
tests/: conftest.py  test_benchmark.py  test_compat.py  test_idna.py  test_misc.py  test_parsing.py  test_search.py
