[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "can_ada"
version = "3.0.0"
description = "Ada is a fast spec-compliant url parser"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tyler Kennedy", email = "tk@tkte.ch" }]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/tktech/can_ada"

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark", "ada_url"]

[tool.scikit-build]
wheel.packages = ["can_ada-stubs"]
